--- a/livegun/Base.lproj/Main.storyboard
+++ b/livegun/Base.lproj/Main.storyboard
@@ -75,13 +75,13 @@
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                             </imageView>
                             <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5Zc-kq-Ki8">
-                                <rect key="frame" x="249.5" y="44" width="168.5" height="32"/>
+                                <rect key="frame" x="249.5" y="44" width="168" height="32"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main-screen-killed" translatesAutoresizingMaskIntoConstraints="NO" id="2kn-An-OCL">
-                                        <rect key="frame" x="0.0" y="0.0" width="147" height="32"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="146.5" height="32"/>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t8m-2n-8tK">
-                                        <rect key="frame" x="147" y="0.0" width="21.5" height="32"/>
+                                        <rect key="frame" x="146.5" y="0.0" width="21.5" height="32"/>
                                         <fontDescription key="fontDescription" type="system" weight="black" pointSize="30"/>
                                         <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
@@ -89,7 +89,7 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="QnU-KW-kg7">
-                                <rect key="frame" x="210" y="130" width="246" height="225"/>
+                                <rect key="frame" x="210.5" y="130" width="246" height="225"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eN3-0t-TmR">
                                         <rect key="frame" x="0.0" y="0.0" width="246" height="55"/>
@@ -260,15 +260,22 @@
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="78q-X8-8ya">
-                                <rect key="frame" x="20" y="28" width="30" height="30"/>
-                                <state key="normal" title="X"/>
+                                <rect key="frame" x="20" y="28" width="25" height="25"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="25" id="4Ds-dx-blX"/>
+                                    <constraint firstAttribute="height" constant="25" id="OGb-2U-wcw"/>
+                                </constraints>
+                                <state key="normal" backgroundImage="close"/>
                                 <connections>
                                     <action selector="onCancel" destination="0fd-Kv-L5G" eventType="touchUpInside" id="4qw-tz-gI9"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lU6-m1-ETI">
-                                <rect key="frame" x="313" y="325" width="40" height="30"/>
-                                <state key="normal" title="Share"/>
+                                <rect key="frame" x="272" y="321" width="123" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="black" pointSize="18"/>
+                                <state key="normal" title="Save or Share">
+                                    <color key="titleColor" red="0.20000000000000001" green="1" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="onShare" destination="0fd-Kv-L5G" eventType="touchUpInside" id="AgQ-hP-H9v"/>
                                 </connections>
@@ -313,7 +320,7 @@
                                 <color key="progressTintColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             </progressView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Searching Target ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KPp-Sy-hAq">
-                                <rect key="frame" x="447" y="28" width="200" height="38"/>
+                                <rect key="frame" x="447" y="28" width="200" height="37.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -330,7 +337,7 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Kills: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fnl-3c-hQj">
-                                <rect key="frame" x="524" y="74" width="47" height="16"/>
+                                <rect key="frame" x="524" y="73.5" width="47" height="16"/>
                                 <fontDescription key="fontDescription" type="system" weight="black" pointSize="13"/>
                                 <color key="textColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -401,6 +408,7 @@
     <resources>
         <image name="camera" width="32" height="32"/>
         <image name="cleaning" width="32" height="32"/>
+        <image name="close" width="24" height="24"/>
         <image name="main-screen-background" width="534" height="300"/>
         <image name="main-screen-button" width="246" height="55"/>
         <image name="main-screen-killed" width="156" height="29"/>
