--- a/livegun/Base.lproj/Main.storyboard
+++ b/livegun/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WaZ-yq-Hs0">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="WaZ-yq-Hs0">
     <device id="retina4_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
@@ -98,6 +98,7 @@
                                             <color key="titleColor" red="0.20000000000000001" green="1" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
+                                            <action selector="onNewMurder" destination="WaZ-yq-Hs0" eventType="touchUpInside" id="nAi-KV-gU7"/>
                                             <segue destination="0Zt-IB-tIa" kind="presentation" identifier="murder" id="Ivg-gy-NiQ"/>
                                         </connections>
                                     </button>
@@ -108,6 +109,7 @@
                                             <color key="titleColor" red="0.20000000000000001" green="1" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
+                                            <action selector="onSuicide" destination="WaZ-yq-Hs0" eventType="touchUpInside" id="JeM-8H-7AX"/>
                                             <segue destination="0Zt-IB-tIa" kind="presentation" identifier="suicide" id="mi6-f2-4uQ"/>
                                         </connections>
                                     </button>
